// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should match snapshot when there are ajaxCallsInProgress 1`] = `
<Fragment>
  <div
    className="loader"
  >
    <Loader />
  </div>
  <Connect(Sidebar) />
  <div
    className="main"
    onClick={[Function]}
  >
    <Connect(Categories) />
  </div>
</Fragment>
`;

exports[`<App /> should match snapshot when there are no ajaxCallsInProgress 1`] = `
<Fragment>
  <div
    className="loader"
  />
  <Connect(Sidebar) />
  <div
    className="main"
    onClick={[Function]}
  >
    <Connect(Categories) />
  </div>
</Fragment>
`;
